--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"@storybook/test": "^8.4.7",
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -46,11 +46,14 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.4.11",
-		"vitest": "^2.0.4"
+		"vite": "^6.0.5",
+		"vitest": "^2.1.8"
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15"
-	}
+	},
+	"overrides": {
+    "@polka/url": "1.0.0-next.28"
+  }
 }
