--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "todo-app-sveltekit",
+	"name": "storefront-app-sveltekit",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
