--- a/package.json
+++ b/package.json
@@ -13,22 +13,12 @@
 		"test": "npm run test:e2e && npm run test:unit -- --run",
 		"test:unit": "vitest",
 		"lint": "eslint . && prettier --check .",
-		"format": "prettier --write .",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^3.2.3",
 		"@eslint/compat": "^1.2.3",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@playwright/test": "^1.45.3",
-		"@storybook/addon-essentials": "^8.4.7",
-		"@storybook/addon-interactions": "^8.4.7",
-		"@storybook/addon-svelte-csf": "^5.0.0-next.21",
-		"@storybook/blocks": "^8.4.7",
-		"@storybook/svelte": "^8.4.7",
-		"@storybook/sveltekit": "^8.4.7",
-		"@storybook/test": "^8.4.7",
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -39,7 +29,6 @@
 		"globals": "^15.0.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
-		"storybook": "^8.4.7",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
