--- a/package.json
+++ b/package.json
@@ -37,10 +37,7 @@
 		"vite": "^6.0.5",
 		"vitest": "^2.1.8"
 	},
-	"dependencies": {
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
-	},
+	"dependencies": {},
 	"overrides": {
 		"@polka/url": "1.0.0-next.28"
 	}
