--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
+		"@happy-dom/global-registrator": "^15.11.7",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@playwright/test": "^1.45.3",
 		"@sveltejs/adapter-node": "^5.2.9",
@@ -28,7 +29,6 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"jsdom": "^25.0.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
