--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"engines": {
+		"node": "22.12.0",
+		"pnpm": "9.15.1"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
