--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.6",
+		"@types/node": "^22.10.2",
+		"@vitest/ui": "^2.1.8",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"jsdom": "^25.0.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
@@ -43,7 +47,6 @@
 		"vite": "^6.0.5",
 		"vitest": "^2.1.8"
 	},
-	"dependencies": {},
 	"overrides": {
 		"@polka/url": "1.0.0-next.28"
 	}
