--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"@types/node": "^22.10.2",
 		"@vitest/ui": "^2.1.8",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "1.0.0-next.74",
+		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -39,7 +41,10 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^2.6.0",
+		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^6.0.5",
