--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"jsdom": "^25.0.1",
+		"lucide-svelte": "^0.469.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
