--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "concurrently 'PORT=4173 API_SERVER_PORT=4174 vite preview' 'cd ../api-server && PORT=4174 go run .'",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "npm run -s test:e2e && npm run -s test:unit -- --run",
@@ -34,6 +34,7 @@
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.0.0-next.74",
 		"clsx": "^2.1.1",
+		"concurrently": "^9.1.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
