--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,7 @@
 		"format": "prettier --write .",
 		"gen": "npm run -s gen:openapi",
 		"gen:openapi": "openapi-typescript ../api/airline.openapi.yaml --output src/lib/airline.openapi.ts",
-		"gen-online:world-map": "GENERATE=1 node --experimental-strip-types src/lib/components/maps/generate.ts > src/lib/components/maps/world-map.svg"
+		"gen-online:world-map": "node --experimental-strip-types src/lib/components/maps/generate.ts > src/lib/components/maps/world-map.geojson"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
@@ -30,6 +30,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.6",
+		"@types/geojson": "^7946.0.15",
 		"@types/node": "^22.10.2",
 		"@vitest/ui": "^2.1.8",
 		"autoprefixer": "^10.4.20",
