--- a/web/package.json
+++ b/web/package.json
@@ -61,6 +61,8 @@
 		"@polka/url": "1.0.0-next.28"
 	},
 	"dependencies": {
+		"d3": "^7.9.0",
+		"d3-geo": "^3.1.1",
 		"openapi-fetch": "^0.13.3"
 	}
 }
