wip works using d3

--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,8 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.6",
+		"@types/d3": "^7.4.3",
+		"@types/d3-geo": "^3.1.0",
 		"@types/geojson": "^7946.0.15",
 		"@types/node": "^22.10.2",
 		"@vitest/ui": "^2.1.8",
