--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,7 @@
 		"format": "prettier --write .",
 		"gen": "npm run -s gen:openapi",
 		"gen:openapi": "openapi-typescript ../api/airline.openapi.yaml --output src/lib/airline.openapi.ts",
-		"gen-online:world-map": "node --experimental-strip-types src/lib/components/maps/generate.ts > src/lib/components/maps/world-map.geojson.json"
+		"gen-online:world-map": "node --experimental-strip-types src/lib/components/maps/generate.ts > src/lib/components/maps/world.geojson.json && geo2topo --quantization 1e6 world=src/lib/components/maps/world.geojson.json > src/lib/components/maps/world.topojson.json; rm src/lib/components/maps/world.geojson.json"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
@@ -34,6 +34,7 @@
 		"@types/d3-geo": "^3.1.0",
 		"@types/geojson": "^7946.0.15",
 		"@types/node": "^22.10.2",
+		"@types/topojson-client": "^3.1.5",
 		"@vitest/ui": "^2.1.8",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.0.0-next.74",
@@ -54,6 +55,7 @@
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
 		"tailwindcss-animate": "^1.0.7",
+		"topojson-server": "^3.0.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^6.0.5",
@@ -65,6 +67,7 @@
 	"dependencies": {
 		"d3": "^7.9.0",
 		"d3-geo": "^3.1.1",
-		"openapi-fetch": "^0.13.3"
+		"openapi-fetch": "^0.13.3",
+		"topojson-client": "^3.1.0"
 	}
 }
