--- a/web/package.json
+++ b/web/package.json
@@ -21,20 +21,21 @@
 		"gen": "npm run -s gen:openapi",
 		"gen:openapi": "openapi-typescript ../api/airline.openapi.yaml --output src/lib/airline.openapi.ts",
 		"gen-online:world-map": "node --experimental-strip-types src/lib/components/maps/generate.ts > src/lib/components/maps/world.geojson.json && geo2topo --quantization 1e6 world=src/lib/components/maps/world.geojson.json > src/lib/components/maps/world.topojson.json; rm src/lib/components/maps/world.geojson.json",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"storybook": "NODE_OPTIONS=\"--no-experimental-require-module\" storybook dev -p 6006",
+		"build-storybook": "NODE_OPTIONS=\"--no-experimental-require-module\" storybook build"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^3.2.3",
 		"@eslint/compat": "^1.2.3",
 		"@playwright/test": "^1.45.3",
 		"@storybook/addon-essentials": "^8.4.7",
 		"@storybook/addon-interactions": "^8.4.7",
 		"@storybook/addon-svelte-csf": "^5.0.0-next.21",
 		"@storybook/blocks": "^8.4.7",
+		"@storybook/manager-api": "^8.4.7",
 		"@storybook/svelte": "^8.4.7",
 		"@storybook/sveltekit": "^8.4.7",
 		"@storybook/test": "^8.4.7",
+		"@storybook/theming": "^8.4.7",
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
