--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
 		"@playwright/test": "^1.45.3",
+		"@sinclair/typebox": "^0.34.13",
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -37,12 +38,13 @@
 		"@types/topojson-client": "^3.1.5",
 		"@vitest/ui": "^2.1.8",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "1.0.0-next.74",
+		"bits-ui": "1.0.0-next.75",
 		"clsx": "^2.1.1",
 		"concurrently": "^9.1.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"formsnap": "^2.0.0",
 		"globals": "^15.0.0",
 		"jsdom": "^25.0.1",
 		"lucide-svelte": "^0.469.0",
@@ -51,6 +53,7 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"sveltekit-superforms": "^2.22.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
@@ -59,7 +62,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^6.0.5",
-		"vitest": "^2.1.8"
+		"vitest": "^2.1.8",
+		"zod": "^3.24.1"
 	},
 	"overrides": {
 		"@polka/url": "1.0.0-next.28"
