--- a/web/package.json
+++ b/web/package.json
@@ -39,7 +39,7 @@
 		"@types/topojson-client": "^3.1.5",
 		"@vitest/ui": "^2.1.8",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "1.0.0-next.76",
+		"bits-ui": "1.0.0-next.77",
 		"clsx": "^2.1.1",
 		"concurrently": "^9.1.0",
 		"eslint": "^9.7.0",
@@ -62,6 +62,7 @@
 		"topojson-server": "^3.0.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
+		"vaul-svelte": "1.0.0-next.3",
 		"vite": "^6.0.5",
 		"vitest": "^2.1.8",
 		"zod": "^3.24.1"
