--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
 			],
 			"url": "https://raw.githubusercontent.com/sqlc-dev/sqlc/refs/heads/main/internal/config/v_two.json"
 		}
-	]
+	],
+	"files.exclude": {
+		"**/*.openapi.ts": true
+	}
 }
