wip feature flags

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,10 @@
 	],
 	"files.exclude": {
 		"**/*.openapi.ts": true
+	},
+	"amp.mcpServers": {
+		"feature-flags": {
+			"url": "http://localhost:7010/sse"
+		}
 	}
 }
