--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,4 +17,6 @@
 	},
 //	"amp.commands.allowlist": ["*"],
 	"workbench.colorTheme": "Default Dark Modern",
+	"vitest.disableWorkspaceWarning": true,
 }
+
