--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"engines": {
-		"node": "22.12.0",
-		"pnpm": "9.15.1"
+		"node": "^22"
 	},
 	"scripts": {
 		"dev": "vite dev",
