--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
 		},
 		"playwright": {
 			"command": "npx",
-			"args": ["-y", "@playwright/mcp@latest"]
+			"args": ["-y", "@playwright/mcp@latest", "--headless"]
 		}
 	},
 //	"amp.commands.allowlist": ["*"],
